# CameraTrack

./: .timetracker  CMakeCache.txt  CMakeLists.txt  CameraCalibration  CameraCalibration.cpp  CameraPosition  CameraPosition.cpp  DisplayImage  GUI.cpp  Makefile  Triangulation.hpp  cmake_install.cmake  gui  main  main.cpp  new.cpp  old.cpp  pointFinder.hpp  still.cpp  tcp_client  webcamTracking  webcamTracking.cpp
.cache/clangd/index/: Camera.hpp.300D3D396654EE22.idx  Camera.hpp.6B451D568BAD304E.idx  CameraCalibration.cpp.0F2323B272955A4C.idx  CameraPosition.cpp.13D9902481DB7C4F.idx  GUI.cpp.E4BA0D9DB21C1AF8.idx  Triangulation.hpp.2D5231F0F40835DF.idx  Triangulation.hpp.59B7AE2B5EB13C57.idx  Triangulation.hpp.76CBAF642A8D7CDC.idx  main.cpp.ED3B7DBD6E8D0617.idx  performance.hpp.3FDE1F9210C4D71F.idx  pointFinder.hpp.3D4A051A1FA8BC15.idx  pointFinder.hpp.8A998818D2807FFC.idx  tcp.hpp.353BD44B6837E84B.idx  tcp.hpp.D6AE73F6850DC77A.idx  tcp_client.cpp.D35FF3F96C038A86.idx  webcamTracking.cpp.17207FC37F5F76A7.idx
Cameras/1/: calibration.xml  transform.xml
Cameras/2/: calibration.xml  transform.xml
Cameras/203/: calibration.xml  transform.xml
libs/: Camera.hpp  Triangulation.hpp  performance.hpp  pointFinder.hpp  tcp.hpp
libs2/: Camera.hpp  Triangulation.hpp  performance.hpp  pointFinder.hpp  tcp.hpp
